--- a/styles/scanner.css
+++ b/styles/scanner.css
@@ -7,6 +7,9 @@
 	max-width: 100%;
 	max-height: 100%;
 }
+#scanner-region img {
+	display: none;
+}
 #scanner-region__dashboard_section button,
 #scanner-region__dashboard_section a {
 	@apply bg-sky-800;
