--- a/styles/global.css
+++ b/styles/global.css
@@ -155,7 +155,8 @@ h3,
 	max-width: 120px;
 	@apply text-white;
 }
-.group input {
+.group input,
+.group select {
 	@apply bg-gray-300;
 	@apply p-1;
 	flex-grow: 1;
@@ -181,6 +182,9 @@ h4 {
 }
 
 .info {
+	width: 100%;
+	justify-content: flex-start;
+	align-items: center;
 	max-width: 100%;
 	overflow: auto;
 	flex-wrap: wrap;
@@ -256,4 +260,7 @@ span.checkout h5 {
 	white-space: nowrap !important;
 	overflow: hidden !important;
 	text-overflow: ellipsis !important;
+}
+.group select {
+	height: 32px;
 }
