--- a/styles/global.css
+++ b/styles/global.css
@@ -116,6 +116,17 @@ p {
 	max-height: 64px;
 	font-weight: 300;
 	font-family: "Inter";
+	position: relative;
+}
+.button:hover::after {
+	width: 100%;
+	top: 0;
+	left: 0;
+	height: 100%;
+	content: "";
+	display: block;
+	@apply bg-black/40;
+	position: absolute;
 }
 
 .dropdown {
@@ -126,7 +137,7 @@ p {
 	flex-direction: column;
 	width: min(10rem, 100%);
 	top: var(--nav-size);
-	right: 5rem;
+	right: 2.5rem;
 }
 .float {
 	font-family: "Inter";
